WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239344
IGNORE_WARNINGS_BEGIN should not warn about unrecognized warnings
https://bugs.webkit.org/show_bug.cgi?id=239344
Summary
IGNORE_WARNINGS_BEGIN should not warn about unrecognized warnings
Michael Catanzaro
Reported
2022-04-14 09:46:13 PDT
See
https://bugs.webkit.org/show_bug.cgi?id=239299#c7
, we don't want to warn about unrecognized warnings
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-04-14 09:49:02 PDT
This is only a problem for GCC, because Clang has __has_warning() which we use to drop attempts to suppress unrecognized warnings, and I'm pretty sure Clang doesn't warn about unrecognized pragmas anyway. (The IGNORE_WARNINGS macros are only implemented for GCC and Clang.)
Michael Catanzaro
Comment 2
2022-04-14 09:55:25 PDT
https://github.com/WebKit/WebKit/pull/291
EWS
Comment 3
2022-04-15 18:11:56 PDT
Committed
r292934
(
249699@main
): <
https://commits.webkit.org/249699@main
> Reviewed commits have been landed. Closing PR #291 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-04-15 18:12:15 PDT
<
rdar://problem/91838502
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug