IGNORE_WARNINGS_BEGIN should not warn about unrecognized warnings https://bugs.webkit.org/show_bug.cgi?id=239344

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2022-04-15
Reviewed by Darin Adler.

If the compiler does not support __has_warning(), then let's also
suppress -Wpragmas to avoid warnings about unrecognized warnings.

Let's make a couple drive-by cleanups as well. Notably,
IGNORE_WARNINGS_BEGIN_IMPL_ is unused and can be removed.

* Source/WTF/wtf/Compiler.h:

Canonical link: https://commits.webkit.org/249699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292934 268f45cc-cd09-0410-ab3c-d52691b4dbfc